2011-08-26  Alexey Proskuryakov  <ap@apple.com>

        DumpRenderTree should begin each test with an empty cookie store
        https://bugs.webkit.org/show_bug.cgi?id=63545
        <rdar://problem/5666907>

        Reviewed by Darin Adler.

        * WebCookieManagerCFNet.cpp:
        (WebCookieManager::cookieStorage):
        (WebCookieManager::setCookieStorage):
        Changed the API to work with new functions in WebCore. It's a bit ugly, because cookieStorage()
        returns an unretained reference, which we cannot provide any more, but it should not be a
        practical issue.

2011-08-17  Adam Roben  <aroben@apple.com>

        Make WebCore keep track of the current device scale factor

        Fixes <http://webkit.org/b/66413> WebCore requires every WebKit port to keep track of the
        device scale factor

        Reviewed by Darin Adler.

        * WebCoreSupport/WebChromeClient.cpp:
        * WebCoreSupport/WebChromeClient.h:
        Removed deviceScaleFactor.

2011-08-15  Dmitry Titov  <dimich@chromium.org>

        FrameLoaderClient::transferLoadingResourceFromPage does not have enough parameters
        https://bugs.webkit.org/show_bug.cgi?id=66165

        Reviewed by Darin Fisher.

        * WebCoreSupport/WebFrameLoaderClient.cpp:
        (WebFrameLoaderClient::transferLoadingResourceFromPage):
        * WebCoreSupport/WebFrameLoaderClient.h:

2011-08-15  Adam Roben  <aroben@apple.com>

        Touch a file to trigger a Windows build

        I'm trying to ferret out some issues with our Debug builder.

        * WebView.cpp: Sorted #includes.

2011-08-10  Adam Roben  <aroben@apple.com>

        Clear up scale factor terminology

        WebKit by and large deals with two scale factors: one intrinsic to the device on which the
        software is running, and one that is per-Page and can be controlled via API calls. This
        patch names the former "deviceScaleFactor" and the latter "pageScaleFactor", and makes the