@@ -1,3 +1,11 @@
+2011-08-29  Alexey Proskuryakov  <ap@apple.com>
+
+        Windows build fix.
+
+        * WebView.cpp:
+        (updateSharedSettingsFromPreferencesIfNeeded):
+        Updated for new function name and signature: currentCFHTTPCookieStorage().
+
 2011-08-26  Alexey Proskuryakov  <ap@apple.com>
 
         DumpRenderTree should begin each test with an empty cookie store
